fix(i18n): restore missing credits key in zh.json to fix build

--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -28,6 +28,7 @@
         "copied": "已复制！",
         "copyFailed": "复制失败",
         "common.credits": "积分",
+        "credits": "积分",
         "common.viewOrders": "查看订单",
         "inStock": "有货",
         "outOfStock": "缺货",
